# theosis

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  config.yaml  eval_tasks.example.json  example.py  pyproject.toml  requirements.txt  run.py
tests/: test_core.py
theosis/: __init__.py  __main__.py  config.py  core.py  eval.py  files.py  ingest.py  memory.py  metrics.py  models.py  prompts.py  router.py  server.py  stats.py  strategies.py  verifiers.py
web/: index.html
